--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
             android:name=".SettingPage"
             android:label="@string/title_activity_setting_page" >
         </activity>
+        <activity
+            android:name=".DefaultSettingHandler"
+            android:label="@string/title_activity_default_page" >
+        </activity>
+
     </application>
 
 </manifest>
